visualizacao das equacoes melhorada

--- a/Information_Retrieval.ipynb
+++ b/Information_Retrieval.ipynb
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e6be35f",
+   "id": "5676655b",
    "metadata": {},
    "source": [
     "<a id='analise_feat'></a>\n",
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 940,
-   "id": "b6612425",
+   "id": "0a0dcb19",
    "metadata": {
     "scrolled": true
    },
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d288f86",
+   "id": "7de4e3ea",
    "metadata": {},
    "source": [
     "* os produtos mais recomendados da tabela de pares nao parecem ter muita relacao com as queries correspondentes. Ex:\n",
@@ -1276,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": 944,
-   "id": "5c8c5e55",
+   "id": "734bcc37",
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd41aac1",
+   "id": "942eb343",
    "metadata": {},
    "source": [
     "Nao ha produtos duplicados na tabela de produtos"
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b58d01c",
+   "id": "598d44df",
    "metadata": {},
    "source": [
     "Com essa analise, consegui entender um pouco mais do problema de negocios. Existe uma **correlacao alta** entre numero de vendas, numero de cliques e numero de adicoes ao carrinho. Especificamente, foi observado que **o produto com maior numero de vendas, adicoes ao carrinho e cliques é o mesmo**!\n",
@@ -4144,7 +4144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fb74070",
+   "id": "0d5c0a0f",
    "metadata": {},
    "source": [
     "<a id='plot_eficiencia'></a>\n",
@@ -4155,7 +4155,7 @@
   {
    "cell_type": "code",
    "execution_count": 931,
-   "id": "1662e6af",
+   "id": "f36ec6fd",
    "metadata": {},
    "outputs": [
     {
@@ -4420,7 +4420,7 @@
     "\n",
     "Como tenho tres colunas de features textuais dos produtos (categoria, titulo e tags), vou o meu ranking sera um modelo linar (por simplicidade) dos scores de relevancia BM25 de cada uma das features:\n",
     "\n",
-    "### $$ f(\\text{Query}, \\text{Produto}) = \\alpha \\times  \\text{BM25}_{\\text{tags}}(\\text{Query}, \\text{Produto})     +\\\n",
+    "$$ f(\\text{Query}, \\text{Produto}) = \\alpha \\times  \\text{BM25}_{\\text{tags}}(\\text{Query}, \\text{Produto})     +\\\n",
     "                                   \\beta   \\times \\text{BM25}_\\text{titulos}(\\text{Query}, \\text{Produto})    \\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\, +\\\n",
     "                                   \\gamma  \\times \\text{BM25}_\\text{categorias}(\\text{Query}, \\text{Produto})   +\\\n",
     "                                   b $$\n",
